--- a/src/main/resources/templates/user/readAll.html
+++ b/src/main/resources/templates/user/readAll.html
@@ -10,28 +10,34 @@
             margin: 20px;
             background-color: #f4f4f4;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
             background-color: white;
         }
+
         th, td {
             padding: 10px;
             text-align: left;
             border: 1px solid #ddd;
         }
+
         th {
             background-color: #4CAF50;
             color: white;
         }
+
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+
         h1 {
             text-align: center;
             margin-bottom: 30px;
         }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -47,40 +53,29 @@
         <tr>
             <th>사용자 ID</th>
             <th>이메일</th>
-            <th>비밀번호</th>
             <th>이름</th>
             <th>생년월일</th>
             <th>성별</th>
-            <th>가입일</th>
             <th>사용 여부</th>
             <th>탈퇴일</th>
+            <th>상세</th>
         </tr>
         </thead>
+
         <tbody>
-        <!-- 데이터가 동적으로 들어갈 부분 -->
-        <tr>
-            <td>1</td>
-            <td>user@example.com</td>
-            <td>password123</td>
-            <td>홍길동</td>
-            <td>1990-01-01</td>
-            <td>남</td>
-            <td>2023-01-01</td>
-            <td>활성</td>
-            <td>NULL</td>
+        <tr th:each="user : ${users}">
+            <td th:text = "${user.userId}"></td>
+            <td th:text = "${user.userEmail}"></td>
+            <td th:text = "${user.userName}"></td>
+            <td th:text = "${#temporals.format(user.userBirth, 'yy년 MM월 dd일')}" ></td>
+            <td>
+                <th:block th:if="${user.gender == user.Gender.M}"> 남성</th:block>
+                <th:block th:unless="${user.gender == user.Gender.M}"> 여성</th:block>
+            </td>
+            <td th:text="${user.isUsed == true ? '활성화' : '비활성화'}"></td>
+            <td th:text="${user.dropoutAt == null ?  '활동중' : #temporals.format(user.dropoutAt, 'yy년 MM월 dd일') }"></td>
+            <td><a th:href="@{'/user/{userId}/detail.do'(userId=${user.userId})}">상세보기</a></td>
         </tr>
-        <tr>
-            <td>2</td>
-            <td>example@domain.com</td>
-            <td>password456</td>
-            <td>김철수</td>
-            <td>1985-05-20</td>
-            <td>여</td>
-            <td>2021-03-15</td>
-            <td>비활성</td>
-            <td>2023-02-01</td>
-        </tr>
-        <!-- 추가 데이터가 이 부분에 동적으로 삽입될 수 있습니다. -->
         </tbody>
     </table>
 </div>
