--- a/src/main/resources/templates/user/readAll.html
+++ b/src/main/resources/templates/user/readAll.html
@@ -85,6 +85,12 @@
 </head>
 <body>
 
+<form action="/user/search.do" method="GET">
+    <label for="search">회원 이름 또는 이메일 검색:</label>
+    <input type="text" id="search" name="search" required>
+    <button type="submit">검색</button>
+</form>
+
 <div class="container">
     <h1>사용자 리스트</h1>
     <table>
