활성/비활성 유저 따로 불러오기

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,8 @@
     <aside class="sidebar">
         <h2> 유저 관련</h2>
         <ul>
-            <li><a href="/user/readAll.do">유저 전체보기</a></li>
+            <li><a href="/user/readActiveUsers.do">유저 찾기전체보기</a></li>
+            <li><a href="/user/readInactiveUsers.do">비활성 유저 찾기</a></li>
         </ul>
 
         <h2> 이벤트 관련</h2>
@@ -52,8 +53,8 @@
 
     <!-- 본문 -->
     <main class="main-content">
-        <h2>대시보드</h2>
-        <p>여기에 본문 내용을 추가하세요.</p>
+        <h2>북마크 처럼</h2>
+        <p>여기에 관리자가 검색창 놓고, 필요한 기능들을 블록으로 만들면 보기 편하지 않을까</p>
     </main>
 
     <!-- 풋터 -->
