--- a/src/main/resources/templates/user/readInactiveUsers.html
+++ b/src/main/resources/templates/user/readInactiveUsers.html
@@ -101,8 +101,8 @@
             <th>이름</th>
             <th>생년월일</th>
             <th>성별</th>
-            <th>활성화 여부</th>
-            <th>활성화 사유</th>
+<!--            <th>활성화 여부</th>-->
+            <th>비활성화 관련 기록</th>
             <th>탈퇴일</th>
             <th>상세</th>
         </tr>
@@ -118,9 +118,9 @@
                 <th:block th:if="${user.gender == user.Gender.M}"> 남성</th:block>
                 <th:block th:unless="${user.gender == user.Gender.M}"> 여성</th:block>
             </td>
-            <td th:text="${user.isUsed == true ? '활성화' : '비활성화'}"></td>
+<!--            <td th:text="${user.isUsed == true ? '활성화' : '비활성화'}"></td>-->
             <td th:text = "${user.memo}"></td>
-            <td th:text="${user.dropoutAt == null ?  '활동중' : #temporals.format(user.dropoutAt, 'yy년 MM월 dd일') }"></td>
+            <td th:text="${user.dropoutAt == null ?  '일지정지' : #temporals.format(user.dropoutAt, 'yy년 MM월 dd일') }"></td>
             <td><a th:href="@{'/user/{userId}/detail.do'(userId=${user.userId})}">상세보기</a></td>
         </tr>
         </tbody>
