--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 <div class="container">
@@ -13,43 +13,7 @@
     </header>
 
     <!-- 사이드 메뉴 -->
-    <aside class="sidebar">
-        <h2> 유저 관련</h2>
-        <ul>
-            <li><a href="/user/readActiveUsers.do">유저 찾기전체보기</a></li>
-            <li><a href="/user/readInactiveUsers.do">비활성 유저 찾기</a></li>
-        </ul>
-
-        <h2> 이벤트 관련</h2>
-        <ul>
-            <li><a href="#">이벤트~~~~~~</a></li>
-            <li><a href="#">이벤트~~~~~~</a></li>
-        </ul>
-
-        <h2> 포스팅 관련</h2>
-        <ul>
-            <li><a href="#">포스팅~~~~~~</a></li>
-            <li><a href="#">포스팅~~~~~~</a></li>
-        </ul>
-
-
-        <h2> 결제 관련</h2>
-        <ul>
-            <li><a href="#">결제~~~~~~</a></li>
-            <li><a href="#">결제~~~~~~</a></li>
-        </ul>
-
-        <h2> 문의내역 관련</h2>
-        <ul>
-            <li><a href="#">문의~~~~~~</a></li>
-            <li><a href="#">문의~~~~~~</a></li>
-        </ul>
-
-        <ul>
-            <li><a href="#">설정</a></li>
-            <li><a href="#">로그아웃</a></li>
-        </ul>
-    </aside>
+    <div th:replace="~{fragments/aside :: sidebar}"></div>
 
     <!-- 본문 -->
     <main class="main-content">
