--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>유저 상세정보</title>
+    <link rel="stylesheet" href="/styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             background-color: #121212; /* 어두운 배경 */
             color: #fff; /* 텍스트 색상: 흰색 */
+            display: flex;
         }
 
         h1 {
@@ -17,12 +19,15 @@
             color: #fff; /* 제목 색상: 흰색 */
             font-size: 2.5rem;
             font-weight: 700;
-            text-transform: uppercase;
             letter-spacing: 2px;
+
         }
 
         .container {
+            margin: 0 0 0 100px;
+            padding: 20px;
             max-width: 1200px;
+            min-width: 600px;
             margin: 0 auto;
         }
 
@@ -30,10 +35,11 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 30px;
             background-color: #1f1f1f; /* 어두운 회색 배경 */
             border-radius: 8px; /* 둥근 모서리 */
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* 테이블에 그림자 효과 */
+
         }
 
         th, td {
@@ -107,9 +113,11 @@
 </head>
 <body>
 
-<div class="container">
-    <h1>회원 상세 정보</h1>
+<!-- 사이드 메뉴 -->
+<div th:replace="~{fragments/aside :: sidebar}"></div>
 
+<div class="container">
+<h1>회원 상세 정보</h1>
     <table>
         <tr>
             <th>항목</th>
