--- a/src/main/resources/templates/user/readActiveUsers.html
+++ b/src/main/resources/templates/user/readActiveUsers.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관리자 페이지</title>
+    <link rel="stylesheet" href="/styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             background-color: #121212;  /* 어두운 배경 */
             color: #fff;  /* 텍스트 색상: 흰색 */
+            display: flex;
         }
 
         h1 {
@@ -25,6 +27,7 @@
         .container {
             max-width: 1200px;
             margin: 0 auto;
+            flex : 1;
         }
 
         /* 테이블 스타일 */
@@ -84,6 +87,10 @@
     </style>
 </head>
 <body>
+
+<!-- 사이드 메뉴 -->
+<div th:replace="~{fragments/aside :: sidebar}"></div>
+
 
 <form action="/user/search.do" method="GET">
     <label for="search">회원 이름 또는 이메일 검색:</label>
