공연리뷰 신고&삭제 구현

--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -19,6 +19,7 @@
     <li><a href="#">이벤트~~~~~~</a></li>
     <li><a href="/review/findActiveReviews.do">이벤트 리뷰</a></li>
     <li><a href="/review/reported">신고된 리뷰</a></li>
+    <li><a href="/review/deactivate">삭제된 리뷰</a></li>
   </ul>
 
   <h2> 포스팅 관련</h2>
