--- a/src/main/resources/templates/review/deactivated_reviews.html
+++ b/src/main/resources/templates/review/deactivated_reviews.html
@@ -87,41 +87,31 @@
 </head>
 <body>
 <div th:replace="~{fragments/aside :: sidebar}"></div>
-<div class="filter-form">
-    <form th:action="@{/review/filter}" method="get">
-        <label for="eventId">공연 ID :</label>
-        <input type="text" id="eventId" name="eventId" placeholder="공연 ID 입력">
-
-        <label for="userId">사용자 ID :</label>
-        <input type="text" id="userId" name="userId" placeholder="사용자 ID 입력">
-
-        <button type="submit">검색</button>
-    </form>
-</div>
-
 <div class="container">
-    <h1>공연리뷰 리스트</h1>
+    <h1>삭제된 공연리뷰 리스트</h1>
     <table>
         <thead>
         <tr>
+            <th>작성일</th>
             <th>리뷰 ID</th>
             <th>사용자 ID</th>
             <th>공연 ID</th>
-            <th>별점</th>
             <th>리뷰 내용</th>
-            <th>작성일</th>
-<!--        <th>상세</th>     -->
+            <th>삭제 사유</th>
+            <th>삭제 날짜</th>
+<!--        <th>상세</th>   -->
         </tr>
         </thead>
 
         <tbody>
         <tr th:each="review : ${reviews}">
+            <td th:text="${#temporals.format(review.createdAt,'yy년 MM월 dd일')}"></td>
             <td th:text="${review.reviewId}"></td>
             <td th:text="${review.userId}"></td>
             <td th:text="${review.eventId}"></td>
-            <td th:text="${review.rate}"></td>
             <td th:text="${review.contents}"></td>
-            <td th:text="${#temporals.format(review.createdAt,'yy년 MM월 dd일')}"></td>
+            <td th:text="${review.deletedReason}"></td>
+            <td th:text="${#temporals.format(review.deletedAt,'yy년 MM월 dd일')}"></td>
 <!--        <td><a href="@{'/review/{reviewId}/detail.do'(reviewId=${review.reviewId})}" style="color: white;">상세보기</a></td>  -->
         </tr>
         </tbody>
