--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -16,8 +16,12 @@
 
   <h2> 이벤트 관련</h2>
   <ul>
-    <li><a href="#">이벤트~~~~~~</a></li>
-    <li><a href="#">이벤트~~~~~~</a></li>
+    <li><a href="/event/readUnapprovedEvents.do">승인 대기 이벤트 전체보기</a></li>
+    <li><a href="/event/readApprovedEvents.do">승인 완료(활성화) 이벤트 전체보기</a></li>
+    <li><a href="/event/InactiveEvent.do">비활성화 이벤트 찾기</a></li>
+    <li><a href="/review/findActiveReviews.do">이벤트 리뷰</a></li>
+    <li><a href="/review/reported">신고된 리뷰</a></li>
+    <li><a href="/review/deactivate">삭제된 리뷰</a></li>
   </ul>
 
   <h2> 포스팅 관련</h2>
