--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -21,7 +21,7 @@
     <li><a href="/event/InactiveEvent.do">비활성화 이벤트 찾기</a></li>
     <li><a href="/review/findActiveReviews.do">이벤트 리뷰</a></li>
     <li><a href="/review/reported">신고된 리뷰</a></li>
-    <li><a href="/review/deactivate">삭제된 리뷰</a></li>
+    <li><a href="/review/deactivate">비활성 리뷰</a></li>
   </ul>
 
   <h2> 포스팅 관련</h2>
