이벤트 활성화로 넘기기 코드 수정

--- a/src/main/resources/templates/event/UnapprovedEvents.html
+++ b/src/main/resources/templates/event/UnapprovedEvents.html
@@ -107,7 +107,7 @@
     </thead>
 
     <tbody>
-    <tr th:each="event : ${InactiveEvent}">
+    <tr th:each="event : ${UnapprovedEvents}">
       <td th:text = "${event.eventId}"></td>
       <td th:text = "${event.ctgrId}"></td>
       <td th:text = "${event.title}"></td>
