--- a/src/main/resources/templates/event/ApprovedEvents.html
+++ b/src/main/resources/templates/event/ApprovedEvents.html
@@ -107,7 +107,7 @@
     </thead>
 
     <tbody>
-    <tr th:each="event : ${ActiveEvent}">
+    <tr th:each="event : ${ApprovedEvents}">
       <td th:text = "${event.eventId}"></td>
       <td th:text = "${event.ctgrId}"></td>
       <td th:text = "${event.title}"></td>
