--- a/src/main/resources/templates/event/detail.html
+++ b/src/main/resources/templates/event/detail.html
@@ -184,19 +184,19 @@
   </table>
   <p>
     <a href="javascript:history.back()" class="back-button">뒤로 가기</a>
-    <a href="javascript:history.back()" class="approve-button">승인</a>
+    <a  th:href="@{/event/{eventId}/ApprovedEvents.do(eventId=${event.eventId})}" class="approve-button">승인</a>
     <th:block th:if="${event.isUsed == true}">
-      <button id="showInactivationForm">비활성화 설정</button>
+      <button id="showUnapprovedForm">비활성화 설정</button>
     </th:block>
     <th:block th:if="${event.isUsed == false}">
-      <button id="showActivationForm">활성화 설정</button>
+      <button id="showApprovedForm">활성화 설정</button>
     </th:block>
 
 
   </p>
 
-  <div id="inactivationContainer" class="disabled">
-    <form th:action="@{/event/{eventId}/inactiveEvent.do(EventId=${event.eventId})}" method="post">
+  <div id="UnapprovedContainer" class="disabled">
+    <form th:action="@{/event/{eventId}/UnapprovedEvent.do(eventId=${event.eventId})}" method="post">
       <p><label>관리자 이름<input type="text" name="adminName" required></label></p>
       <p><label>비활성화 사유<input type="text" name="memo" th:value="${event.memo}" required></label></p>
       <p>
@@ -204,8 +204,8 @@
       </p>
     </form>
   </div>
-  <div id="activationContainer" class="disabled">
-    <form th:action="@{/event/{eventId}/activateEvent.do(eventId=${event.eventId})}" method="post">
+  <div id="ApprovedContainer" class="disabled">
+    <form th:action="@{/event/{eventId}/ApprovedEvent.do(eventId=${event.eventId})}" method="post">
       <p><label>관리자 이름<input type="text" name="adminName" required></label></p>
       <p><label>활성화 사유<input type="text" name="memo" th:value="${event.memo}" required></label></p>
       <p>
