리뷰 재수정

--- a/src/main/resources/templates/review/deactivated_reviews.html
+++ b/src/main/resources/templates/review/deactivated_reviews.html
@@ -88,7 +88,7 @@
 <body>
 <div th:replace="~{fragments/aside :: sidebar}"></div>
 <div class="container">
-    <h1>삭제된 공연리뷰 리스트</h1>
+    <h1>비활성 공연리뷰 리스트</h1>
     <table>
         <thead>
         <tr>
