--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -17,8 +17,8 @@
   <h2> 이벤트 관련</h2>
   <ul>
     <li><a href="/event/readUnapprovedEvents.do">승인 대기 이벤트 전체보기</a></li>
-    <li><a href="/event/{eventId}/Approved.do">승인 완료(활성화) 이벤트 전체보기</a></li>
-    <li><a href="/event/{eventId}/UnapprovedEvents.do">비활성화 이벤트 찾기</a></li>
+    <li><a href="/event/readApprovedEvents.do">승인 완료(활성화) 이벤트 전체보기</a></li>
+    <li><a href="/event/UnapprovedEvents.do">비활성화 이벤트 찾기</a></li>
   </ul>
 
   <h2> 포스팅 관련</h2>
