--- a/src/main/resources/templates/event/detail2.html
+++ b/src/main/resources/templates/event/detail2.html
@@ -185,17 +185,17 @@
   <p>
     <a href="javascript:history.back()" class="back-button">뒤로 가기</a>
     <a  th:href="@{/event/{eventId}/ApprovedEvents.do(eventId=${event.eventId})}" class="approve-button">승인</a>
-    <th:block th:if="${event.isUsed == true}">
-      <button id="showUnapprovedForm">비활성화 설정</button>
+    <th:block th:if="${event.isUsed == false}">
+      <button id="showApprovedForm">활성화 설정</button>
     </th:block>
   </p>
 
-  <div id="UnapprovedContainer">
-    <form th:action="@{/event/{eventId}/UnapprovedEvent.do(eventId=${event.eventId})}" method="post">
+  <div id="ApprovedContainer">
+    <form th:action="@{/event/{eventId}/ApprovedEvent.do(eventId=${event.eventId})}" method="post">
       <p><label>관리자 이름<input type="text" name="adminName" required></label></p>
-      <p><label>비활성화 사유<input type="text" name="memo" th:value="${event.memo}" required></label></p>
+      <p><label>활성화 사유<input type="text" name="memo" th:value="${event.memo}" required></label></p>
       <p>
-        <button type="submit">비활성화 하기</button>
+        <button type="submit">활성화 하기</button>
       </p>
     </form>
   </div>
