--- a/src/main/resources/templates/event/UnapprovedEvents.html
+++ b/src/main/resources/templates/event/UnapprovedEvents.html
@@ -82,6 +82,9 @@
       background-color: #444;  /* 헤더에 마우스를 올리면 배경색 변경 */
       color: #e0e0e0;  /* 텍스트 색상 변경 */
     }
+    td,th{
+      white-space: nowrap;
+    }
 
   </style>
 </head>
