--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -26,8 +26,7 @@
 
   <h2> 포스팅 관련</h2>
   <ul>
-    <li><a href="#">포스팅~~~~~~</a></li>
-    <li><a href="#">포스팅~~~~~~</a></li>
+    <li><a href="/posting/deactivate">신고된 포스팅</a></li>
   </ul>
 
 
