포스팅&포스팅댓글 구현

--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -27,6 +27,7 @@
   <h2> 포스팅 관련</h2>
   <ul>
     <li><a href="/posting/deactivate">신고된 포스팅</a></li>
+    <li><a href="#">신고된 포스팅 댓글</a></li>
   </ul>
 
 
