--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -53,7 +53,7 @@
 
   <h2> 위젯 관련</h2>
   <ul>
-    <li><a href="/widget/read.do">위젯 전체 설정</a></li>
+    <li><a href="/widgets/readAll.do">위젯 전체 설정</a></li>
   </ul>
 
   <h2> 이벤트 관련</h2>
