--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -68,14 +68,9 @@
 
   <h2> 포스팅 관련</h2>
   <ul>
-    <li><a href="/posting/deactivate">신고된 포스팅</a></li>
+    <li><a href="/posting/reported">신고된 포스팅</a></li>
+    <li><a href="/posting/deactivated">비활성 포스팅</a></li>
     <li><a href="#">신고된 포스팅 댓글</a></li>
-  </ul>
-
-  <h2> 결제 관련</h2>
-  <ul>
-    <li><a href="#">결제~~~~~~</a></li>
-    <li><a href="#">결제~~~~~~</a></li>
   </ul>
 
   <h2> 문의내역 관련</h2>
