--- a/src/main/resources/templates/posting/reported.html
+++ b/src/main/resources/templates/posting/reported.html
@@ -87,26 +87,34 @@
 </style>
 <body>
 <div th:replace="~{fragments/aside :: sidebar}"></div>
+
 <div class="container">
-    <h1>신고된 포스트 목록</h1>
+    <h1>신고된 게시글 목록</h1>
     <table>
         <thead>
         <tr>
-            <th>포스트 ID</th>
-            <th>작성자</th>
+            <th>작성일</th>
+            <th>게시글 ID</th>
+            <th>사용자 ID</th>
             <th>내용</th>
-            <th>복원</th>
+            <th>관리자 조치</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="post : ${posts}">
+            <td th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd')}"></td>
             <td th:text="${post.postId}"></td>
             <td th:text="${post.userId}"></td>
             <td th:text="${post.contents}"></td>
             <td>
-                <form th:action="@{/posting/activate}" method="post" style="margin-top: 10px;">
-                    <input type="hidden" name="postId" th:value="${post.postId}" />
-                    <button type="submit">복원</button>
+                <form th:action="@{/posting/deactivate}" method="post">
+                    <input type="hidden" name="postId" th:value="${post.postId}"/>
+                    <input type="text" name="deletedReason" placeholder="삭제 사유" required/>
+                    <button type="submit">비활성화</button>
+                </form>
+                <form th:action="@{/posting/reactivate}" method="post" style="margin-top: 5px;">
+                    <input type="hidden" name="postId" th:value="${post.postId}"/>
+                    <button type="submit">복구</button>
                 </form>
             </td>
         </tr>
