--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -74,7 +74,8 @@
   <ul>
     <li><a href="/posting/reported">신고된 포스팅</a></li>
     <li><a href="/posting/deactivated">비활성 포스팅</a></li>
-    <li><a href="#">신고된 댓글</a></li>
+    <li><a href="/postingComments/reported">신고된 댓글</a></li>
+    <li><a href="/postingComments/deactivated">비활성 댓글</a></li>
   </ul>
 
   <h2> 문의 관리</h2>
