문의답변 구현

--- a/src/main/resources/templates/fragments/aside.html
+++ b/src/main/resources/templates/fragments/aside.html
@@ -80,8 +80,8 @@
 
   <h2> 문의 관리</h2>
   <ul>
-    <li><a href="#">문의 목록</a></li>
-    <li><a href="#">처리 현황</a></li>
+    <li><a href="/inquires/list">문의내역 목록</a></li>
+    <li><a href="#">문의 처리 현황</a></li>
   </ul>
 
   <ul>
